# pyinventory_ynh

./: .editorconfig  .gitignore  Makefile  README.md  README_es.md  README_eu.md  README_fr.md  README_gl.md  README_id.md  README_it.md  README_nl.md  README_pl.md  README_ru.md  README_zh_Hans.md  check_process  dev-cli.py  local_settings_source.py  local_test.py  manifest.json  manifest.toml  pyproject.toml  requirements.dev.txt  tests.toml
.github/workflows/: package_check.yml  package_linter.yml  pytest.yml  tests.yml
.run/: Template Python.run.xml  dev-cli --help.run.xml  dev-cli test.run.xml
conf/: create_superuser.py  gunicorn.conf.py  manage.py  nginx.conf  pyinventory.service  requirements.txt  secret.txt  settings.py  setup_user.py  systemd.service  urls.py  wsgi.py  ynh_authenticate.py  ynh_pyinventory_settings.py  ynh_sso_ldap_backend.py  ynh_urls.py
doc/: ADMIN.md  DESCRIPTION.md  DISCLAIMER.md
pyinventory_ynh/: __init__.py  constants.py
pyinventory_ynh/cli/: dev.py
pyinventory_ynh/cli_dev/: __init__.py  code_style.py  local_test.py  packaging.py  testing.py
pyinventory_ynh/tests/: __init__.py  test_django_project.py  test_django_project_create_unknown_user_1.snapshot.html  test_doctests.py  test_project_setup.py  test_readme.py
scripts/: _common.sh  backup  change_url  install  remove  restore  upgrade
tests/: test_devshell_bootstrap.py  test_django_project.py  test_django_project_create_unknown_user_1.snapshot.html  test_project_setup.py
