[project]
name = "pyinventory_ynh"
dynamic = ["version"]
description = "Web based management to catalog things including state and location etc."
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
authors = [
    {name = 'Jens Diemer', email = 'pyinventory_ynh@jensdiemer.de'}
]

# Until we can update to Django 5.2, we need to stay with Python <3.14
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyinventory>=0.22.1",  # https://github.com/jedie/PyInventory
    "django_yunohost_integration",  # https://github.com/YunoHost-Apps/django_yunohost_integration
    #
    # Stay with Django <= 5.1, because >=5.2 requires postgresql >= 14
    # See: https://docs.djangoproject.com/en/dev/ref/databases/#postgresql-notes
    # But current YunoHost v12.x postgresql version is 13.x
    "Django<5.2",
    #
    'gunicorn',
    'psycopg[binary]', # https://github.com/psycopg/psycopg
    'django-redis',
    'django-axes', # https://github.com/jazzband/django-axes
]
[dependency-groups]
dev = [
    "django-debug-toolbar",  # http://django-debug-toolbar.readthedocs.io/en/stable/changes.html
    "manage_django_project",  # https://github.com/jedie/manage_django_project
    "manageprojects",  # https://github.com/jedie/manageprojects
    "bx_django_utils",  # https://github.com/boxine/bx_django_utils
    "beautifulsoup4",  # https://pypi.org/project/beautifulsoup4/
    "uv",  # https://github.com/astral-sh/uv
    "tblib",   # https://github.com/ionelmc/python-tblib
    "nox",  # https://github.com/wntrblm/nox
    "coverage",  # https://github.com/nedbat/coveragepy
    "ruff", # https://github.com/astral-sh/ruff
    "codespell",  # https://github.com/codespell-project/codespell
    "EditorConfig",  # https://github.com/editorconfig/editorconfig-core-py
    "pip-audit",  # https://github.com/pypa/pip-audit
    "mypy",  # https://github.com/python/mypy
    "twine",  # https://github.com/pypa/twine
    "typeguard",  # https://github.com/agronholm/typeguard/
]

[project.urls]
Documentation = "https://github.com/YunoHost-Apps/pyinventory_ynh"
Source = "https://github.com/YunoHost-Apps/pyinventory_ynh"

[project.scripts]
pyinventory_ynh_dev = "pyinventory_ynh.cli_dev:main"


[ynh-integration]
local_settings_source= "local_settings_source.py"


[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=7.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyinventory_ynh*"]

[tool.setuptools.dynamic]
version = {attr = "pyinventory_ynh.__version__"}


[tool.cli_base.pip_audit]
# https://github.com/jedie/cli-base-utilities/blob/main/docs/pip_audit.md
requirements=["requirements.dev.txt"]
strict=true
require_hashes=true
ignore-vuln=[]


[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 120
exclude = [
  ".*/","*/htmlcov/*","*/migrations/*","*/local_test/*"
]

[tool.ruff.lint]
preview = true  # Needed for some of the rules
extend-select = [
    "E", # pycodestyle: https://docs.astral.sh/ruff/rules/#error-e
    "I", # isort: https://docs.astral.sh/ruff/rules/#isort-i
]
ignore = [
    "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
    "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"


[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing"]
source = ['.']
command_line = './dev-cli.py test'
disable_warnings = ["couldnt-parse"]

[tool.coverage.report]
omit = ['.*', '*/tests/*']
skip_empty = true
fail_under = 10
show_missing = true
exclude_lines = [
    'if self.debug:',
    'pragma: no cover',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]


[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
allow_redefinition = true  # https://github.com/python/mypy/issues/7165
show_error_codes = true
plugins = []
exclude = ['.venv', 'tests']


[manageprojects] # https://github.com/jedie/manageprojects
initial_revision = "b204761"
initial_date = 2022-12-21T20:25:20+01:00
cookiecutter_template = "https://github.com/jedie/cookiecutter_templates/"
cookiecutter_directory = "yunohost_django_package"
applied_migrations = [
    "2cdc1d8", # 2024-08-25T19:00:41+02:00
    "6fa011a", # 2024-09-07T11:11:40+02:00
    "b3d9208", # 2024-12-23T17:04:43+01:00
    "d1df540", # 2025-01-11T08:58:27+01:00
    "c059f97", # 2025-03-21T19:19:56+01:00
    "279f2d0", # 2025-09-15T16:30:52+02:00
    "ae399b9", # 2025-09-21T09:34:36+02:00
    "38082ef", # 2025-10-16T10:28:32+02:00
    "c425447", # 2025-11-02T17:01:35+01:00
]

[manageprojects.cookiecutter_context.cookiecutter]
project_name = "PyInventory"
project_id = "pyinventory"
full_name = "Jens Diemer"
github_username = "jedie"
author_email = "pyinventory_ynh@jensdiemer.de"
upstream_pkg_name = "inventory_project"
upstream_pkg_app_name = "inventory"
upstream_pkg_project_name = "pyinventory"
upstream_url = "https://github.com/jedie/PyInventory"
ynh_app_pkg_name = "pyinventory_ynh"
ynh_app_url = "https://github.com/YunoHost-Apps/pyinventory_ynh"
bug_tracker_url = "https://github.com/jedie/PyInventory/issues"
upstream_version = "0.22.1"
ynh_suffix_version = "ynh2"
package_description = "Web based management to catalog things including state and location etc."
license = "GPL-3.0-or-later"
_template = "https://github.com/jedie/cookiecutter_templates/"
applied_migrations = [
    "877e2ec", # 2023-08-17T20:54:24+02:00
    "be3f649", # 2023-08-22T19:36:57+02:00
    "c1a9d97", # 2023-11-01T19:59:17+01:00
    "0a5d693", # 2023-11-25T15:06:21+01:00
    "6b89813", # 2023-11-25T15:23:07+01:00
    "4abd4c0", # 2023-11-25T15:59:31+01:00
    "2f9fd7b", # 2023-11-26T20:13:32+01:00
]
